# django-vditor

./: .coveragerc  .flake8  .gitignore  .pdm-python  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  index.html  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-code.yml  codacy-coverage-reporter.yml  dependabot-auto-merge.yml  gitee-mirror.yml  main_ci.yml  performance.yml  publish.yml  pypi-release.yml  vditor-latest-version.yml  vditor-new-version.yml
locale/en/LC_MESSAGES/: django.po
locale/zh_Hans/LC_MESSAGES/: django.po
vditor/: cache_utils.py  configs.py  fields.py  security.py  tests.py  urls.py  views.py  widgets.py
vditor/management/: __init__.py
vditor/management/commands/: __init__.py  vditor_cache.py
vditor/templates/: widget.html
vditor_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
vditor_app/migrations/: 0001_initial.py  0002_vditortest.py
vditor_app/templates/: form.html
vditor_demo/: asgi.py  settings.py  urls.py  wsgi.py
