[project]
name = "django-vditor"
version = {use_scm = true}
description = "A WYSIWYG editor plugin made by vditor for django"
readme = "README.md"
keywords = ["django", "editor", "django-application"]
authors = [
    {name = "pi-dal", email = "pi-dal@foxmail.com"},
]
dependencies = [
    "django<4.0.0,>=2.2",
]
requires-python = ">=3.7"
dynamic = ["version", "classifiers"]
license = {text = "GPL-3.0"}

[project.urls]
Homepage = "https://pypi.org/project/django-vditor"
Repository = "https://github.com/pi-dal/django-vditor"
Documentation = "https://github.com/pi-dal/django-vditor/blob/main/README.md"

[tool]
[tool.pdm]
includes = [
    "vditor/",
    "README.md",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage~=5.4",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
