[project]
name = "django-vditor"
version = "0.1.0"
description = "A WYSIWYG editor plugin made by vditor for django"
readme = "README.md"
keywords = [
    "django",
    "editor",
    "django-application",
]
authors = [
    {name = "pi-dal", email = "hi@pi-dal.com"},
]
dependencies = [
    "django>=5.2",
    "werkzeug",
]
requires-python = ">=3.10"
classifiers = []
license = {text = "MIT"}

[project.urls]
Homepage = "https://pypi.org/project/django-vditor"
Repository = "https://github.com/pi-dal/django-vditor"
Documentation = "https://github.com/pi-dal/django-vditor/blob/main/README.md"

[tool]
[tool.pdm]
includes = [
    "vditor/",
    "README.md",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.0",
    "flake8",
    "black",
    "mypy",
    "safety",
    "twine",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
