[project]
name = "django-vditor"
version = "1.1.3"
description = "A WYSIWYG editor plugin made by vditor for django"
readme = "README.md"
keywords = [
    "django",
    "editor",
    "django-application",
]
authors = [
    {name = "pi-dal", email = "hi@pi-dal.com"},
]
dependencies = [
    "django>=5.2",
    "werkzeug",
]
requires-python = ">=3.10"
classifiers = []
license = {text = "MIT"}

[project.urls]
Homepage = "https://pypi.org/project/django-vditor"
Repository = "https://github.com/pi-dal/django-vditor"
Documentation = "https://github.com/pi-dal/django-vditor/blob/main/README.md"

[tool]
[tool.pdm]
includes = [
    "vditor/",
    "README.md",
]

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.0",
    "flake8",
    "black",
    "mypy",
    "safety",
    "twine",
]

[tool.pdm.scripts]
test = {cmd = ["python", "manage.py", "test"]}
lint = "flake8 ."
format = "black ."
format-check = "black --check ."
typecheck = "mypy --ignore-missing-imports vditor/ vditor_demo/"
coverage = {cmd = ["coverage", "run", "manage.py", "test"]}
coverage-report = "coverage report -m"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
